--- a/rockpaperscissors.css
+++ b/rockpaperscissors.css
@@ -11,7 +11,7 @@ html {
  body {
     height: 100vh;
     width: 100%;
-	background: black	 ;
+	background:#a0845c	 ;
 	color: #fff;
 	font-family: "Roboto", sans-serif;
 }
